@@ -1,3 +1,8 @@
+2006-12-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-default-method): Before setting to "pscp", check
+	whether package password.el is loaded, or Pageant is running.
+
 2006-12-04  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-methods): Add "ControlPath" and "ControlMaster"
